[project]
name = "lscalibgb"
version = "0.1.0"
description = ""
authors = [
    {name = "Shu Tamano"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy (>=2.3.4,<3.0.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "scipy (>=1.16.3,<2.0.0)",
    "statsmodels (>=0.14.5,<0.15.0)",
    "polyagamma (>=2.0.2,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
